enable per-user conversation and calendar integration